test/files/neg/plugin-multiple-rafter/lib/plugins.jar.desired.sha1
3f1b1571728dc322666ad8a78cdbb943eee0c013 ?plugins.jar
